fix build issue